# cybot-template

./: Cargo.toml  README.md  openocd.gdb  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
