cargo-features = ["per-package-target"]

[package]
authors = ["Jack Morrison <jackmorr@iastate.edu>"]
edition = "2021"
readme = "README.md"
name = "cyrstest"
version = "0.1.0"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
cybot = { git = "https://github.com/Atrociously/cybot" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations set to "fat" for even better optimizations
